--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,3 +1,13 @@
 #paineis-sobre-nos {
 	margin-top: 20px;
 }
+
+.titulo-depoimento {
+	background-color: #0275D8;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	margin-bottom: 0px;
+	color: white;
+	font-size: 24px;
+
+}
