--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -9,5 +9,15 @@
 	margin-bottom: 0px;
 	color: white;
 	font-size: 24px;
+}
 
+.contato-select,
+.group-radio {
+	width: 50%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.group-radio radio .radio:first-child {
+	margin-top: 0;
 }
