--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -26,8 +26,9 @@ footer {
 	background-color: #333333;
 	color: white;
 	padding: 20px;
+    margin-top: 10px;
 }
 
-footer address:first-child {
-    margin-bottom: 0px;
+footer address:last-child {
+    margin-bottom: 0;
 }
