Estilizando nosso menu usando o navbar

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,6 +5,7 @@
 .titulo-depoimento {
 	background-color: #0275D8;
 	padding-top: 25px;
+    padding-left: 15px;
 	padding-bottom: 25px;
 	margin-bottom: 0px;
 	color: white;
