--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,3 +1,30 @@
+
+html,
+body {
+    height: 100%;
+}
+
+header {
+    background-image: url(../img/castelo.jpg);;
+    background-size: cover;
+    background-position: top center;
+    height: 100%;
+}
+
+
+.topCasaFina-banner {
+    color: white;
+    background-color: #00000090;
+    padding: 20px;
+    width: 80%;
+    border-radius: 5px;
+}
+
+.topCasaFina-banner h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 #paineis-sobre-nos {
 	margin-top: 20px;
 }
